Exports components from main js
- Allows installing with Vue.use()

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "library",
+  "name": "@vue/library",
   "version": "0.0.0",
   "description": "A short description of the library",
   "rollup": {
